--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Ashutosh | Senior Software Engineer" />
   <meta property="og:description" content="Senior Software Engineer" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://ashu-mycode.github.io/" />
   <meta property="og:site_name" content="Ashutosh | Senior Software Engineer" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
+  <meta property="article:publisher" content="https://ashu-mycode.github.io/" />
+  <meta property="og:image" content="https://ashu-mycode.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <!-- <meta name="twitter:site" content="@varad_bhogayata" /> -->
