--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           <div class="col s12 m6 l4">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/IMG_3597.JPG"
+                <img alt="Screenshot of web app" src="/assets/img/dealingapp.jpeg"
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
